--- a/appointment.html
+++ b/appointment.html
@@ -313,7 +313,7 @@
                             </label>
                         </div>
                         <div class="shift-option">
-                            <input type="radio" name="shift" id="evening" value="Evening (4:00 - 7:00 PM)" required>
+                            <input type="radio" name="shift" id="evening" value="Evening (5:00 - 8:00 PM)" required>
                             <label for="evening" class="shift-label">
                                 <i class="fas fa-moon" style="color:slateblue; margin-right:5px;"></i> बेलुका (Evening)
                             </label>
@@ -332,7 +332,7 @@
             </form>
             
             <p style="margin-top: 30px; font-size: 0.9rem; color: #856404; background: #fff9e6; padding: 15px; border-radius: 10px; border-left: 5px solid #ffeeba; line-height: 1.5;">
-                <i class="fas fa-hospital-alt" style="margin-right: 5px;"></i> <b>क्यान्सर अस्पताल (BPKMCH)</b> जाने बिरामीहरूले कृपया सिधै अस्पतालको ओपिडी काउन्टरमा गई टोकन लिनुहोला।
+                <i class="fas fa-hospital-alt" style="margin-right: 5px;"></i> <b>बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल(BPKMCH)</b> जाने बिरामीहरूले कृपया सिधै अस्पतालको ओपिडी काउन्टरमा गई टोकन लिनुहोला।
             </p>
         </div>
     </div>
