--- a/links.html
+++ b/links.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Links | Dr. Nirmal Lamichhane</title>
-    <meta name="description" content="Connect with Dr. Nirmal Lamichhane - Senior Consultant Surgeon.">
+    
+    <title>Links | Dr. Nirmal Lamichhane | Senior Surgeon & Cancer Specialist</title>
+    <meta name="description" content="Connect with Dr. Nirmal Lamichhane (Nirmal Surgeon), Senior Consultant Surgeon at National City Hospital & BPKMCH. Official links, Appointment & AI Assistant.">
+    <meta name="keywords" content="Nirmal, Dr Nirmal, Nirmal Surgeon, Nirmal Links, National City Hospital Bharatpur, BPKMCH Doctor, Cancer Surgeon Nepal, Urologist Chitwan, Nirmal Lamichhane Contact">
+    <meta name="author" content="Dr. Nirmal Lamichhane">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfilePage",
+      "name": "Dr. Nirmal Lamichhane (Nirmal Surgeon) Official Links",
+      "description": "Professional links and AI Assistant for Dr. Nirmal Lamichhane, Senior Consultant Surgeon in Bharatpur.",
+      "mainEntity": {
+        "@type": "Person",
+        "name": "Dr. Nirmal Lamichhane",
+        "alternateName": "Nirmal Surgeon",
+        "jobTitle": "Senior Consultant Surgeon",
+        "affiliation": [
+          { "@type": "Hospital", "name": "National City Hospital" },
+          { "@type": "MedicalOrganization", "name": "BPKMCH" }
+        ]
+      }
+    }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    
     <style>
         :root {
             --primary: #0056b3;
@@ -30,14 +53,11 @@
             flex-direction: column;
         }
 
-        /* --- NAVIGATION BAR (Added to match other pages) --- */
         header { background: #fff; padding: 15px 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.08); position: sticky; top: 0; z-index: 1000; width: 100%; }
         .nav-box { max-width: 1100px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; }
         .nav-links a { color: #555; margin-left: 20px; text-decoration: none; font-weight: 600; font-size: 0.95rem; }
         .nav-links a:hover, .nav-links a.active { color: var(--primary); }
-        .mobile-menu { display: none; } /* Hide on desktop */
 
-        /* --- MAIN CONTENT CENTERED --- */
         .main-content {
             flex: 1;
             display: flex;
@@ -47,13 +67,11 @@
             width: 100%;
         }
 
-        /* --- PROFILE --- */
         .profile-container { text-align: center; margin-bottom: 30px; animation: fadeInDown 0.8s ease-out; }
         .profile-img { width: 120px; height: 120px; border-radius: 50%; border: 4px solid var(--primary); object-fit: cover; box-shadow: 0 8px 15px rgba(0,0,0,0.1); margin-bottom: 15px; }
         .name { font-family: 'Montserrat', sans-serif; font-size: 1.4rem; font-weight: 700; color: var(--primary-dark); margin-bottom: 5px; }
         .title { font-size: 0.95rem; color: #555; background: #fff; padding: 5px 15px; border-radius: 20px; display: inline-block; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
 
-        /* --- LINKS --- */
         .links-container { width: 100%; max-width: 480px; display: flex; flex-direction: column; gap: 15px; animation: fadeInUp 0.8s ease-out; }
         .link-btn {
             display: flex; align-items: center; justify-content: center; background: var(--card-bg);
@@ -77,7 +95,6 @@
 
         footer { margin-top: 20px; padding-top: 20px; text-align: center; font-size: 0.8rem; color: #777; width: 100%; }
 
-        /* --- AI CHATBOT WINDOW STYLES --- */
         .chat-window {
             position: fixed; bottom: 20px; right: 20px; width: 350px; height: 480px;
             background: var(--chat-bg); border-radius: 15px; box-shadow: 0 5px 30px rgba(0,0,0,0.3);
@@ -88,7 +105,6 @@
         .chat-header { background: var(--chat-header); color: white; padding: 15px; display: flex; justify-content: space-between; align-items: center; font-weight: bold; }
         .chat-close { cursor: pointer; font-size: 1.2rem; }
 
-        /* LANGUAGE TOGGLE INSIDE CHAT */
         .lang-switch { display: flex; justify-content: center; gap: 10px; padding: 10px; background: #f0f0f0; border-bottom: 1px solid #ddd; }
         .lang-btn { padding: 4px 12px; border-radius: 15px; border: 1px solid var(--primary); background: white; color: var(--primary); cursor: pointer; font-size: 0.8rem; font-weight: bold; }
         .lang-btn.active { background: var(--primary); color: white; }
@@ -115,7 +131,7 @@
         @keyframes fadeInUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
         @media (max-width: 768px) {
-            .nav-links { display: none; } /* Simplified mobile nav handling */
+            .nav-links { display: none; }
         }
     </style>
 </head>
@@ -137,30 +153,30 @@
 
     <div class="main-content">
         <div class="profile-container">
-            <img src="profile.png" alt="Dr. Nirmal Lamichhane" class="profile-img">
+            <img src="profile.png" alt="Nirmal Surgeon - Dr. Nirmal Lamichhane Senior Surgeon Bharatpur" class="profile-img">
             <h1 class="name">Dr. Nirmal Lamichhane</h1>
-            <div class="title">Senior Consultant Surgeon</div>
-            <p style="font-size: 0.9rem; color: #666; margin-top: 8px;">Uro-Oncology Specialist | BPKMCH</p>
+            <div class="title">Senior Consultant Surgeon | Nirmal Surgeon</div>
+            <p style="font-size: 0.9rem; color: #666; margin-top: 8px;">Cancer & Uro-Oncology Specialist | National City Hospital</p>
         </div>
 
         <div class="links-container">
             <a href="index.html" class="link-btn btn-website"><i class="fas fa-globe"></i> Visit Official Portfolio</a>
-            <button onclick="toggleChat()" class="link-btn btn-ai"><i class="fas fa-robot"></i> AI Assistant</button>
+            <button onclick="toggleChat()" class="link-btn btn-ai"><i class="fas fa-robot"></i> AI Assistant (Nirmal AI)</button>
             <a href="tel:056493511" class="link-btn btn-clinic"><span>Call Clinic (National City Hospital)</span><i class="fas fa-phone-alt"></i></a>
             <a href="mailto:nirmal.lamichhane@gmail.com" class="link-btn"><i class="fas fa-envelope"></i> Send an Email</a>
-            <a href="#" class="link-btn"><i class="fas fa-graduation-cap" style="color:#4285F4;"></i> Research & Publications</a>
-            <a href="https://maps.google.com/?q=B.P.+Koirala+Memorial+Cancer+Hospital" target="_blank" class="link-btn"><i class="fas fa-map-marker-alt" style="color:#ea4335;"></i> Find Hospital Location</a>
+            <a href="#" class="link-btn"><i class="fas fa-graduation-cap" style="color:#4285F4;"></i> Surgeon Research & Publications</a>
+            <a href="https://maps.google.com/?q=B.P.+Koirala+Memorial+Cancer+Hospital" target="_blank" class="link-btn"><i class="fas fa-map-marker-alt" style="color:#ea4335;"></i> Hospital Location (Bharatpur)</a>
         </div>
 
         <div class="social-row">
-            <a href="#" class="social-icon" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="social-icon" title="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-icon" title="Facebook - Dr. Nirmal"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="social-icon" title="LinkedIn - Nirmal Surgeon"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" class="social-icon" title="Twitter - Dr. Nirmal Surgeon"><i class="fab fa-twitter"></i></a>
         </div>
 
         <footer>
-            <p>© 2025 Dr. Nirmal Lamichhane.</p>
-            <p>Design by BL </p>
+            <p>© 2026 Dr. Nirmal Lamichhane (Nirmal Surgeon).</p>
+            <p>Bharatpur, Chitwan, Nepal</p>
         </footer>
     </div>
 
@@ -176,9 +192,9 @@
         </div>
 
         <div class="chat-auth" id="chat-auth">
-            <p id="auth-info" style="color:#666; text-align:center;">Please enter details to start chatting.</p>
+            <p id="auth-info" style="color:#666; text-align:center;">Please enter details to start chatting with Dr. Nirmal's Assistant.</p>
             <label class="auth-label" id="label-name">Your Name</label>
-            <input type="text" id="client-name" class="auth-input" placeholder="        ">
+            <input type="text" id="client-name" class="auth-input" placeholder="Enter Name">
             <label class="auth-label" id="label-phone">Mobile Number</label>
             <input type="tel" id="client-phone" class="auth-input" placeholder="XXXXXXXXX">
             <button class="auth-btn" id="start-btn" onclick="startChat()">Start Chatting</button>
